--- a/index.html
+++ b/index.html
@@ -602,15 +602,18 @@
                 </div>
                 <br />
                 <h2>FAQ</h2>
-                <p>15$ — это какое количествово макарон туда включено? И если не на определенную дату сколько ждать?</p>
-                <p>7 больших макарон. Обычно мы выдаём заказы по средам каждую неделю. Поэтому будьте готовы подождать до ближайшей среды.</p>
+                <br /><br />
+                <p><strong>Q:</strong> 15$ — это какое количествово макарон туда включено? И если не на определенную дату сколько ждать?</p>
+                <p><strong>A:</strong> 7 больших макарон. Обычно мы выдаём заказы по средам каждую неделю. Поэтому будьте готовы подождать до ближайшей среды.</p>
                 <br />
-                <p>Можно есть кормящим матерям?</p>
-                <p>На этот вопрос мы ответить пока не сможем, <a href="https://www.google.by/search?q=%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE+%D0%BB%D0%B8+%D0%BC%D0%B0%D0%BA%D0%B0%D1%80%D0%BE%D0%BD%D1%81+%D0%BA%D0%BE%D1%80%D0%BC%D1%8F%D1%89%D0%B8%D0%BC+%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D1%8F%D0%BC&oq=%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE+%D0%BB%D0%B8+%D0%BC%D0%B0%D0%BA%D0%B0%D1%80%D0%BE%D0%BD%D1%81+%D0%BA%D0%BE%D1%80%D0%BC%D1%8F%D1%89%D0%B8%D0%BC+%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D1%8F%D0%BC&aqs=chrome..69i57j0l2.8992j0j7&sourceid=chrome&espv=210&es_sm=91&ie=UTF-8#newwindow=1&q=%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE+%D0%BB%D0%B8+%D0%BF%D0%B8%D1%80%D0%BE%D0%B6%D0%BD%D1%8B%D0%B5+%D0%BA%D0%BE%D1%80%D0%BC%D1%8F%D1%89%D0%B8%D0%BC+%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D1%8F%D0%BC">попробуйте поискать ответ</a>.</p>
+                <p><strong>Q:</strong> Можно есть кормящим матерям?</p>
+                <p><strong>A:</strong> На этот вопрос мы ответить пока не сможем, <a href="https://www.google.by/search?q=%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE+%D0%BB%D0%B8+%D0%BC%D0%B0%D0%BA%D0%B0%D1%80%D0%BE%D0%BD%D1%81+%D0%BA%D0%BE%D1%80%D0%BC%D1%8F%D1%89%D0%B8%D0%BC+%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D1%8F%D0%BC&oq=%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE+%D0%BB%D0%B8+%D0%BC%D0%B0%D0%BA%D0%B0%D1%80%D0%BE%D0%BD%D1%81+%D0%BA%D0%BE%D1%80%D0%BC%D1%8F%D1%89%D0%B8%D0%BC+%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D1%8F%D0%BC&aqs=chrome..69i57j0l2.8992j0j7&sourceid=chrome&espv=210&es_sm=91&ie=UTF-8#newwindow=1&q=%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE+%D0%BB%D0%B8+%D0%BF%D0%B8%D1%80%D0%BE%D0%B6%D0%BD%D1%8B%D0%B5+%D0%BA%D0%BE%D1%80%D0%BC%D1%8F%D1%89%D0%B8%D0%BC+%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D1%8F%D0%BC">попробуйте поискать ответ</a>.</p>
                 <br />
-                <p>Подскажите где надо будет забрать ваши вкусняши, хочу сделать заказ ;)?</p>
-                <p>Забрать можно на Фрунзенской и на Востоке, после заказа на мейл мы скидываем карту, адрес и детали.</p>
-                
+                <p><strong>Q:</strong> Подскажите где надо будет забрать ваши вкусняши, хочу сделать заказ ;)?</p>
+                <p><strong>A:</strong> Забрать можно на Фрунзенской и на Востоке, после заказа на мейл мы скидываем карту, адрес и детали.</p>
+                <p><strong>Q:</strong> Доставляете ли вы макаронс в Москву (Питер, Ригу...)?</p>
+                <p><strong>A: Пока нет. Минск онли.</strong></p>
+                <br />
                 <p><a href="https://docs.google.com/forms/d/1kL81Ux7gCt4c-EDf9P8eGYTorqIP54cZKZ2L_Um2thI/viewform">Спросите нас, что угодно</a>, если вам что-то непонятно</p>
                  <br />
                  <br />
