--- a/index.html
+++ b/index.html
@@ -616,9 +616,9 @@
                 <p><strong>A:</strong> Забрать можно на Фрунзенской и на Востоке, после заказа на мейл мы скидываем карту, адрес и детали.</p>
                 <br />
                 <p><strong>Q:</strong> Доставляете ли вы макаронс в Москву (Питер, Ригу...)?</p>
-                <p><strong>A: Пока нет. Минск онли.</strong></p>
+                <p><strong>A:</strong> Пока нет. Минск онли.</p>
                 <br />
-                <p><a href="https://docs.google.com/forms/d/1kL81Ux7gCt4c-EDf9P8eGYTorqIP54cZKZ2L_Um2thI/viewform">Спросите нас, что угодно</a>, если вам что-то непонятно</p>
+                <p>Не нашли ответа? Не расстраивайтесь — <a href="https://docs.google.com/forms/d/1kL81Ux7gCt4c-EDf9P8eGYTorqIP54cZKZ2L_Um2thI/viewform">спросите нас, что угодно</a>, если вам что-то непонятно, смелее, в письмах мы жжём!</p>
                  <br />
                  <br />
             </section>
