--- a/index.html
+++ b/index.html
@@ -603,6 +603,9 @@
                 <br />
                 <h2>FAQ</h2>
                 <br /><br />
+                <p><strong>Q:</strong> Что это вообще такое?</p>
+                <p><strong>A:</strong> Макарон — это французкое пирожное, приготовленное по оригинальному рецепту, сделанное из миндальной меренги. По середине кремовая начинка, она бывает разных вкусов, в наших коробочках — ассорти с разными начинками. Фишка в том, что оно очень сложно готовится и оно очень вкусное. Коробочки у нас крутые ми-ми-ми. И фишечки всякие. Макароны — это фишка. Их делали ещё в 13 веке для монархов. Их ели только короли. Но короли ели только печеньки. А крем придумал какой-то чел позже. Вот так. И все спорят кто их придумал. А может всё было и не так.</p>
+                <br />
                 <p><strong>Q:</strong> 15$ — это какое количествово макарон?</p>
                 <p><strong>A:</strong> 7 больших макарон.</p>
                 <br />
@@ -619,8 +622,14 @@
                 <p><strong>A:</strong> Пока нет. Минск онли.</p>
                 <br />
                 <p>Не нашли ответа? Не расстраивайтесь — <a href="https://docs.google.com/forms/d/1kL81Ux7gCt4c-EDf9P8eGYTorqIP54cZKZ2L_Um2thI/viewform">спросите нас, что угодно</a>, если вам что-то непонятно, смелее, в письмах мы жжём!</p>
-                 <br />
-                 <br />
+                <br />
+                <br />
+                
+                <h2>Отзывы</h2>
+                <br /><br />
+                <p><strong>Q:</strong> 15$ — это какое количествово макарон?</p>
+                <p><strong>A:</strong> 7 больших макарон.</p>
+                <br />
             </section>
         </article>
         <footer class="footer">
