--- a/index.html
+++ b/index.html
@@ -626,9 +626,23 @@
                 <br />
                 
                 <h2>Отзывы</h2>
+                <i>Нам иногда пишут так, что мы прыгаем от счастья. А иногда мы косячим, этого тоже мы скрывать не собираемся.</i>
                 <br /><br />
-                <p><strong>Q:</strong> 15$ — это какое количествово макарон?</p>
-                <p><strong>A:</strong> 7 больших макарон.</p>
+                <p>Натали, привет!<br>
+                Буду краток:<br>
+                <br>
+                0. Пункт ноль: вилочка из украшений теперь висит на холодильнике и напоминает о твоих сладостях :)<br>
+                1. Я и моя жена единогласно решили, что La Duree отдыхает в сторонке.<br>
+                2. Мы думали растянуть удовольствие хотя бы на два дня, но съели всё за ужин и по макаронке осталось на завтрак, т.е. уложились часов в 10 в итоге :)<br>
+                3. Уровень исполнения макаронок превосходит любые кондитерские, фабрики и проч-проч...<br>
+                4. Короче, макаронки просто бесподобны и мы бы с радостью еще две коробочки заказали на любую дату, как только это возможно! :)<br>
+                <br>
+                Вот как-то так :) <br>
+                Если надо, могу заполнить форму в гугл-докс еще раз для порядку :)<br>
+                СПАСИБО ОГРОМНОЕ за такие радости!</p>
+                <p><strong>Stanislav Laptenok</strong> 24 февраля 2014</p>
+                <br />
+                <br />
                 <br />
             </section>
         </article>
