--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                 <br /><br />
                 <i>Нам иногда пишут так, что мы прыгаем от счастья. А иногда мы косячим, этого тоже мы скрывать не собираемся.</i>
                 <br /><br />
-                -------------------------------- 1 --------------------------------<br>
+                <center>-------------------------------- 1 --------------------------------</center>
                 <p>Натали, привет!<br>
                 Буду краток:<br>
                 <br>
@@ -643,6 +643,7 @@
                 Если надо, могу заполнить форму в гугл-докс еще раз для порядку :)<br>
                 СПАСИБО ОГРОМНОЕ за такие радости!</p>
                 <p><strong>Stanislav Laptenok</strong> 24 февраля 2014</p>
+                <center>-------------------------------------------------------------------</center>
                 <br />
                 <br />
                 <br />
