--- a/index.html
+++ b/index.html
@@ -644,6 +644,11 @@
                 СПАСИБО ОГРОМНОЕ за такие радости!</p>
                 <p><strong>Stanislav Laptenok</strong> 24 февраля 2014</p>
                 <center>-------------------------------------------------------------------</center>
+                <br>
+                <br>
+                <center>-------------------------------- 2 --------------------------------</center>
+                <center><iframe src="//instagram.com/p/lMR3xfhMan/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></center>
+                <center>-------------------------------------------------------------------</center>
                 <br />
                 <br />
                 <br />
