--- a/index.html
+++ b/index.html
@@ -648,6 +648,8 @@
                 <br>
                 <center>-------------------------------- 2 --------------------------------</center>
                 <center><iframe src="//instagram.com/p/lMR3xfhMan/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></center>
+                <p>Коробочка радужного настроения) @lililoveme @lililovemeby они восхитительны! Яркие и безумно вкусные) #lililovemeby #macarons</p>
+                <p><strong>lyuda_den4yk</strong>5 марта 2014</p>
                 <center>-------------------------------------------------------------------</center>
                 <br />
                 <br />
