--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                 <p><strong>A:</strong> 7 больших макарон.</p>
                 <br />
                 <p><strong>Q:</strong> Если не на определенную дату, то сколько ждать?</p>
-                <p><strong>A:</strong> Обычно мы выдаём заказы по средам каждую неделю. Будьте готовы подождать до ближайшей среды.</p>
+                <p><strong>A:</strong> Обычно мы выдаём заказы по средам каждую неделю. Поэтому будьте готовы подождать до ближайшей среды или закажите к нужной вам дате!</p>
                 <br />
                 <p><strong>Q:</strong> Можно есть кормящим матерям?</p>
                 <p><strong>A:</strong> На этот вопрос мы ответить пока не сможем, <a href="https://www.google.by/search?q=%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE+%D0%BB%D0%B8+%D0%BC%D0%B0%D0%BA%D0%B0%D1%80%D0%BE%D0%BD%D1%81+%D0%BA%D0%BE%D1%80%D0%BC%D1%8F%D1%89%D0%B8%D0%BC+%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D1%8F%D0%BC&oq=%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE+%D0%BB%D0%B8+%D0%BC%D0%B0%D0%BA%D0%B0%D1%80%D0%BE%D0%BD%D1%81+%D0%BA%D0%BE%D1%80%D0%BC%D1%8F%D1%89%D0%B8%D0%BC+%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D1%8F%D0%BC&aqs=chrome..69i57j0l2.8992j0j7&sourceid=chrome&espv=210&es_sm=91&ie=UTF-8#newwindow=1&q=%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE+%D0%BB%D0%B8+%D0%BF%D0%B8%D1%80%D0%BE%D0%B6%D0%BD%D1%8B%D0%B5+%D0%BA%D0%BE%D1%80%D0%BC%D1%8F%D1%89%D0%B8%D0%BC+%D0%BC%D0%B0%D1%82%D0%B5%D1%80%D1%8F%D0%BC">попробуйте поискать ответ</a>.</p>
