--- a/buy/index.html
+++ b/buy/index.html
@@ -86,6 +86,8 @@
 <a href="../"><div class="logo"></div></a>
 <a class="link active">Заказать</a>
 <a href="../subscribe" class="link" style="margin-left:30px;">Подписаться на макаронс</a>
+<a href="../#voprosy" class="link" style="margin-left:30px;">Вопросы</a>
+<a href="../#dostavka" class="link" style="margin-left:30px;">Доставка</a>
 </div>
 
 <div class="form">
