--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -86,6 +86,8 @@
 <a href="../"><div class="logo"></div></a>
 <a href="../buy/" class="link">Заказать</a>
 <a class="link active" style="margin-left:30px;">Подписаться на макаронс</a>
+<a href="../#voprosy" class="link" style="margin-left:30px;">Вопросы</a>
+<a href="../#dostavka" class="link" style="margin-left:30px;">Доставка</a>
 </div>
 
 <div class="form">
