--- a/index.html
+++ b/index.html
@@ -207,17 +207,17 @@
     <p class="a">Обычно, у нас расписано всё на одну-две недели вперёд: будьте готовы подождать одну-две недели. </p>
         <p class="break">—</p>
     <p class="q">Можно ли выбирать вкусы?</p>
-    <p class="a">Нет. Можно заказать ассорти, либо указать один конкретный вкус.</p>
+    <p class="a">Нет, по умолчанию вы получите ассорти. Либо можете указать один конкретный вкус.</p>
             <p class="break">—</p>
     <p class="q">Какие бывают вкусы?</p>
-    <p class="a">Арахис, кофе, карамель, мята, лимон, вишня, красная смородина, шоколадная вишня. Что-то новенькое — каждую неделю.</p>
+    <p class="a">Арахис, кофе, карамель, мята, лимон, вишня, красная смородина, шоколадная вишня.</p>
             <p class="break">—</p>
     <p class="q">Сколько можно хранить макаронс?</p>
     <p class="a">В холодильнике до 5 дней.</p>
     </div>
     <div class="section" id="info2">
     <p class="q">Как забрать макаронс?</p>
-    <p class="a">Забрать можно недалеко от Востока или Фрунзенской. Адрес, карту и время мы вышлем в первом письме.</p>
+    <p class="a">Забрать можно недалеко от Востока или Фрунзенской. Адрес, карту и время мы вышлем в первом письме после заказа.</p>
         <p class="break">—</p>
     <p class="q">Есть ли у вас доставка?</p>
     <p class="a">Нет, вы должны забрать макаронс сами. Доставка только каждое субботнее утро при <a href="subscribe/" class="link">подписке на макаронс</a>.</p> 
