--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		background: #abe0f3;
 	}
         
-    @media only screen and (min-width : 320px) and (max-width : 568px)
+    @media only screen and (min-device-width : 320px) and (max-device-width : 568px)
         { 
           .logo {
                 background-image: url(imgs/logo.svg);
