--- a/index.html
+++ b/index.html
@@ -154,10 +154,11 @@
           .logo {
                 background-image: url(imgs/logo.svg);
                 margin: 0 auto;
-                margin-bottom: 20px;
+                margin-bottom: 40px;
+                margin-top: 20px;
             }
         .link {
-                font-size:37px;
+                font-size:80px;
             }
         #fullPage-nav{
                 display:none;
