--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
         #fullPage-nav{
                 display:none;
             }
+            
+        .q, .a, .break {
+            font-size:32px;
+        }
+            
         }
 	
 	</style>
