--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 scrollingSpeed: 300,
                 easing: 'easeInQuart',
                 navigation: true,
-
+                autoScrolling: false,
                 navigationTooltips: ['Красивые', 'Цветные', 'Ровные', 'Нежные', 'Вкусные', 'Сладкие', 'Яркие', 'Сочные', 'Разные', 'Чёткие', 'Свежие', 'Вопросы', 'Доставка' ],
                 anchors:['krasivye', 'cvetnie', 'rovnie', 'nezhnie', 'vkusnie', 'sladkie', 'yarkie', 'sochnie', 'raznie', 'chetkie', 'svezhie', 'voprosy', 'dostavka'],
 			});
