--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
                 verticalCentered: true,
-                scrollingSpeed: 300,
                 easing: 'easeInQuart',
                 navigation: true,
                 autoScrolling: false,
+                css3: true,
                 navigationTooltips: ['Красивые', 'Цветные', 'Ровные', 'Нежные', 'Вкусные', 'Сладкие', 'Яркие', 'Сочные', 'Разные', 'Чёткие', 'Свежие', 'Вопросы', 'Доставка' ],
                 anchors:['krasivye', 'cvetnie', 'rovnie', 'nezhnie', 'vkusnie', 'sladkie', 'yarkie', 'sochnie', 'raznie', 'chetkie', 'svezhie', 'voprosy', 'dostavka'],
 			});
