--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 	#section8,
 	#section9,
 	#section10,
-	#section11{
+	#section11,
+    #section12{
 		background-size: cover;
         background-position:center top;
 	}
@@ -78,6 +79,10 @@
 	}
     #section11{
 		background-image: url(imgs/bg11.jpg);
+	}
+    #section12{
+		background-image: url(imgs/bg12.jpg);
+        padding: 0 30em 0 0;
 	}
 
     #info{
@@ -192,8 +197,8 @@
                 navigation: true,
                 autoScrolling: false,
                 css3: true,
-                navigationTooltips: ['Красивые', 'Цветные', 'Ровные', 'Нежные', 'Вкусные', 'Сладкие', 'Яркие', 'Сочные', 'Разные', 'Чёткие', 'Свежие', 'Вопросы', 'Доставка' ],
-                anchors:['krasivye', 'cvetnie', 'rovnie', 'nezhnie', 'vkusnie', 'sladkie', 'yarkie', 'sochnie', 'raznie', 'chetkie', 'svezhie', 'voprosy', 'dostavka'],
+                navigationTooltips: ['Красивые', 'Цветные', 'Ровные', 'Нежные', 'Вкусные', 'Сладкие', 'Яркие', 'Сочные', 'Разные', 'Чёткие', 'Свежие', 'Я', 'Вопросы', 'Доставка' ],
+                anchors:['krasivye', 'cvetnie', 'rovnie', 'nezhnie', 'vkusnie', 'sladkie', 'yarkie', 'sochnie', 'raznie', 'chetkie', 'svezhie', 'eto-ya', 'voprosy', 'dostavka'],
 			});
 		});
 	</script>
@@ -221,6 +226,9 @@
     <div class="section" id="section9"></div>
     <div class="section" id="section10"></div>
     <div class="section" id="section11"></div>
+    <div class="section" id="section12">
+        <p class="q" style="color:#fff;">Да! Это я вам пеку макароны :))</p>
+    </div>
     <div class="section" id="info1">
     <p class="q">25 $ — это сколько макарон?</p>
     <p class="a">В коробочке 300 грамм, это 7 больших макарон.</p>
