--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         padding: 0 30em 0 0;
 	}
 
-    #info{
-    
+    #info2{
+        background-color:#fff;
     }
     
     .q, .a, .break {
