lisa story added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 	#section10,
 	#section11,
     #section12,
-    #section13{
+    #section13
+    #section-story{
 		background-size: cover;
         background-position:center top;
 	}
@@ -46,6 +47,10 @@
 		background-image: url(imgs/bg1.jpg);
 		padding: 0 0 0 0;
 	}
+    #section-story{
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(imgs/bg-story.jpg);
+		padding: 0 0 0 0;
+    }
 	#section2{
 		background-image: url(imgs/bg2.jpg);
 		padding: 0 0 0 0;
@@ -220,6 +225,23 @@
 
 <div id="fullpage">
 	<div class="section " id="section1"></div>
+    <div class="section" id="section-story">
+        <p class="a" style="color:#fff;">
+            С чего всё началось...
+            <br />
+            —
+            <br />
+            Привет!!!!!)
+            <br />
+Как у вас дела!?) Ммм, все надеюсь супер!<br />
+Потому что, у меня просто супер настроение и супер новость) По картинкам вы уже, наверное, догадались)<br />
+Я долго доводила до ума эти маленькие зверские пироженки, и вот, настал момент,<br /> когда я с радостью могу принять от вас заказ на их изготовление!) Ыыыыть)<br />
+И у меня уже были ооочень плодотворные выходные в этом плане!<br />
+Только новость достигла инстаграма, сработал эффект сарафанного...<br />
+        —<br />
+        <a href="http://lililoveme.livejournal.com/102246.html" target="_blank" class="link">Читать продолжение в моём бложике</a>
+        </p>
+    </div>
 	<div class="section" id="section2"></div>
 	<div class="section" id="section3"></div>
     <div class="section" id="section4"></div>
