--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
 	<style>
 
+    a {
+         color: #00aaff;
+    }
+
+    a:hover {
+        color: #0073e5;
+        transition: 0.2s;
+    }
+
     @font-face {
             font-family: 'playfair';
             src: url('fonts/playfair.woff');
@@ -120,15 +129,26 @@
         color: #feacb1;
     }
 
-    .h1-1 {
+    h1 {
         font-family: 'propisi';
         display: block;
+        line-height: 0.95em;
         position: absolute;
+    }
+
+    .h1-1 {
         left: 58%;
         bottom: 30%;
         text-align: left;
         color: #39e5cf;
-        line-height: 0.95em;
+    }
+
+    .h1-3 {
+        right: 10%;
+        bottom: 10%;
+        text-align: left;
+        font-size: 3em;
+        color: #ff6633;
     }
 
 	#header{
@@ -263,7 +283,7 @@
 Только новость достигла инстаграма, сработал эффект сарафанного ра... <a href="http://lililoveme.livejournal.com/102246.html" target="_blank" class="link">Продолжение в моём бложике</a>
         </p>
     </div>
-	<div class="section" id="section2"></div>
+	<div class="section" id="section2"><h1 class="h1-3">Коробочка стоит 20 $,<br />к конкретному дню — 25 $<br />Ещё есть <a href="subscribe/">подписка по субботам</a><br />за 100 $ в месяц</h1></div>
     <div class="section" id="insta1"><iframe src="http://instagram.com/p/m0lcT7gDzQ/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
 	<div class="section" id="section3"></div>
     <div class="section" id="section4"></div>
