--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
         color: #ff6633;
     }
 
+    .h1-4 {
+        left: 5%;
+        bottom: 8%;
+        text-align: left;
+        max-width: 700px;
+        font-size: 2.5em;
+        color: #7358c7;
+    }
+
 	#header{
 		position:fixed;
 		height: 50px;
@@ -285,7 +294,14 @@
     </div>
 	<div class="section" id="section2"><h1 class="h1-3">Коробочка стоит 20 $,<br />к конкретному дню — 25 $<br />Ещё есть <a href="subscribe/">подписка по субботам</a><br />за 100 $ в месяц</h1></div>
     <div class="section" id="insta1"><iframe src="http://instagram.com/p/m0lcT7gDzQ/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
-	<div class="section" id="section3"></div>
+	<div class="section" id="section3"><h1 class="h1-4">В коробочке ассорти начинок, либо какая-то
+одна на ваш вкус. Малина, лимон, апельсин,
+шоколад, кофе, белый шоколад с ванилью и малиной,
+соленая карамель, арахис, мохито!
+Мои самые любимые — это соленая кармель
+и арахис!!! Но это для&nbsp;сладкоежек))
+Любителям не очень сладкого скорее
+всего приглянется кофе и лимон.</h1></div>
     <div class="section" id="section4"></div>
     <div class="section" id="section5"></div>
     <div class="section" id="insta1"><iframe src="http://instagram.com/p/msLoxdgD_z/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
