--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 <body>
 
 <div id="header">
-<a href="#krasivye"><div class="logo"></div></a>
+<a href="#korobka"><div class="logo"></div></a>
 <a href="buy/" class="link">Заказать</a>
 <a href="subscribe/" class="link" style="margin-left:30px;">Подписаться&nbsp;на&nbsp;макаронс</a>
 <a href="#voprosy" class="link" style="margin-left:30px;">Вопросы</a>
