--- a/index.html
+++ b/index.html
@@ -134,19 +134,18 @@
         display: block;
         line-height: 0.95em;
         position: absolute;
+        text-align: left;
     }
 
     .h1-1 {
         left: 58%;
         bottom: 30%;
-        text-align: left;
         color: #39e5cf;
     }
 
     .h1-3 {
         right: 10%;
         bottom: 10%;
-        text-align: left;
         font-size: 3em;
         color: #ff6633;
     }
@@ -154,10 +153,17 @@
     .h1-4 {
         left: 5%;
         bottom: 8%;
-        text-align: left;
         max-width: 700px;
         font-size: 2.5em;
         color: #7358c7;
+    }
+
+    .h1-5 {
+        color: #36d640;
+        font-size: 4em;
+        position: absolute;
+        top: 20%;
+        left: 5%;
     }
 
 	#header{
@@ -302,7 +308,7 @@
 и арахис!!! Но это для&nbsp;сладкоежек))
 Любителям не очень сладкого скорее
 всего приглянется кофе и лимон.</h1></div>
-    <div class="section" id="section4"></div>
+    <div class="section" id="section4"><h1 class="h1-5">В <a href="http://vk.com/lililovemeby" target="_blank">группе вконтакте</a> и <a href="http://instagram.com/lililovemeby" target="_blank">инстаграме</a> пишут:<br />«Божественны», «Сумасшедше&nbsp;вкусные»,<br />«Мегакрутые», «надо было брать две»</h1></div>
     <div class="section" id="section5"></div>
     <div class="section" id="insta1"><iframe src="http://instagram.com/p/msLoxdgD_z/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
     <div class="section" id="section7"></div>
