Two last slides deleted

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 
-
 	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="examples.css" />
 
@@ -94,14 +93,8 @@
     #section8{
 		background-image: url(imgs/bg8.jpg);
 	}
-    #section9{
-		background-image: url(imgs/bg9.jpg);
-	}
     #section10{
 		background-image: url(imgs/bg10.jpg);
-	}
-    #section11{
-		background-image: url(imgs/bg11.jpg);
 	}
     #section12{
 		background-image: url(imgs/bg12.jpg);
@@ -264,8 +257,8 @@
                 navigation: true,
                 autoScrolling: false,
                 css3: true,
-                navigationTooltips: ['Коробка', 'История', 'Вью', 'Чистота', 'Тру', 'Биг', 'Омном', 'Кухня', 'Трёха', 'Сок', 'Коробки', 'Лоплоп', 'Чёткие', 'Свежие', 'Я', 'Вопросы', 'Доставка', 'Лайв' ],
-                anchors:['korobka', 'story', 'view', 'chistota', 'true', 'big', 'omnom', 'kuhnya', 'treha', 'sok', 'korobki', 'loplop', 'chetkie', 'svezhie', 'eto-ya', 'voprosy', 'dostavka', 'live' ],
+                navigationTooltips: ['Коробка', 'История', 'Вью', 'Чистота', 'Тру', 'Биг', 'Омном', 'Кухня', 'Трёха', 'Сок', 'Коробки', 'Чёткие', 'Я', 'Вопросы', 'Доставка', 'Лайв' ],
+                anchors:['korobka', 'story', 'view', 'chistota', 'true', 'big', 'omnom', 'kuhnya', 'treha', 'sok', 'korobki', 'chetkie', 'eto-ya', 'voprosy', 'dostavka', 'live' ],
 			});
 		});
 	</script>
@@ -314,9 +307,7 @@
     <div class="section" id="section7"></div>
     <div class="section" id="section8"></div>
     <div class="section" id="insta1"><iframe src="http://instagram.com/p/mTXUl_gD2s/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
-    <div class="section" id="section9"></div>
     <div class="section" id="section10"></div>
-    <div class="section" id="section11"></div>
     <div class="section" id="section12">
         <p class="q" style="color:#fff;">Да! Это я вам пеку макароны :))</p>
     </div>
