--- a/index.html
+++ b/index.html
@@ -257,14 +257,23 @@
                 navigation: true,
                 autoScrolling: false,
                 css3: true,
-                navigationTooltips: ['Коробка', 'История', 'Цена', 'Цвета', 'Вкусы', 'Отзывы', 'Омном', 'Кухня', 'Трёха', 'Сок', 'Коробки', 'Чёткие', 'Я', 'Вопросы', 'Доставка', 'Лайв' ],
-                anchors: ['korobka', 'story', 'price', 'colors', 'tastes', 'otzyvy', 'omnom', 'kuhnya', 'treha', 'sok', 'korobki', 'chetkie', 'eto-ya', 'voprosy', 'dostavka', 'live' ],
+                navigationTooltips: ['Коробка', 'История', 'Цена', 'Цвета', 'Вкусы', 'Отзывы', 'Омном', 'Кухня', 'Трёха', 'Сок', 'Коробки', 'Чёткие', 'Я', 'Вопросы', 'Доставка', 'Лайв', 'Лайк!' ],
+                anchors: ['korobka', 'story', 'price', 'colors', 'tastes', 'otzyvy', 'omnom', 'kuhnya', 'treha', 'sok', 'korobki', 'chetkie', 'eto-ya', 'voprosy', 'dostavka', 'live', 'facebook' ],
 			});
 		});
 	</script>
 
 </head>
 <body>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 <div id="header">
 <a href="#korobka"><div class="logo"></div></a>
@@ -342,6 +351,9 @@
     </div>
     <div class="section" id="section13">
         <a href="http://instagram.com/lililoveme" class="link" style="background: #fff;">&nbsp;Вся движуха в нашем инстаграме&nbsp;<br />&nbsp;instagram.com/lililoveme&nbsp;<br /><br />&nbsp;Посмотреть&nbsp;</a></div>
+    <div class="section" id="section14">
+        <div class="fb-like-box" data-href="https://www.facebook.com/lililovemeby" data-width="920" data-height="580" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="false"></div>
+    </div>
 </div>
 
 <!-- Yandex.Metrika counter -->
