--- a/buy/index.html
+++ b/buy/index.html
@@ -79,6 +79,17 @@
         margin:0 auto;
     }
 
+    .alert-info {
+        margin: 30px 0 50px 0;
+        background-color: #d9edf7;
+        border-color: #bce8f1;
+        color: #31708f;
+        padding: 15px 20px;
+        border: 1px solid transparent;
+        border-radius: 3px;
+        line-height: 23px;
+    }
+
 	</style>
 
 </head>
@@ -94,6 +105,8 @@
 
 <div class="form">
 
+<div class="alert alert-info">Я ушла на летние каникулы и не принимаю заказы до первого сентября. Иногда у меня появляются свободные коробочки: я делаю их в свободное время и со всей душой. Вы можете следить за их появлением <a href="http://instagram.com/lililoveme">в моём инстаграмме @lililoveme</a>.</div>
+<!--
 <form action="https://docs.google.com/forms/d/1Hx9uyYi29BLrRAcgCtGLy4ITiCXjv5Zth2Zd7h8iVBk/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
 <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label class="ss-q-item-label" for="entry_339980997"><div class="ss-q-title">Меня зовут
@@ -179,7 +192,7 @@
 <div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
 <input type="submit" name="submit" value="Заказать макаронс!" id="ss-submit">
 </tr></tbody></table></div></ol></form>
-
+-->
 </div>
 
 <!-- Yandex.Metrika counter -->
