--- a/buy/index.html
+++ b/buy/index.html
@@ -105,6 +105,7 @@
 
 <div class="form">
 
+<center><img src="sorry.png" alt="Скоро с новыми силами!"></center>
 <div class="alert alert-info">Я ушла на летние каникулы и не принимаю заказы до первого сентября. Иногда у меня появляются свободные коробочки: я делаю их в свободное время и со всей душой. Вы можете следить за их появлением <a href="http://instagram.com/lililoveme">в моём инстаграмме @lililoveme</a>.</div>
 <!--
 <form action="https://docs.google.com/forms/d/1Hx9uyYi29BLrRAcgCtGLy4ITiCXjv5Zth2Zd7h8iVBk/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
