--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 
+    <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
+
 	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="examples.css" />
 
@@ -317,8 +319,7 @@
 
 <div id="header">
 <a href="#korobka"><div class="logo"></div></a>
-<a href="buy/" class="link">Заказать</a>
-<a href="subscribe/" class="link" style="margin-left:30px;">Подписаться&nbsp;на&nbsp;макаронс</a>
+<a href="buy/" class="link">Заказать макаронс</a>
 <a href="#voprosy" class="link" style="margin-left:30px;">Вопросы</a>
 <a href="#dostavka" class="link" style="margin-left:30px;">Доставка</a>
 </div>
@@ -340,7 +341,7 @@
 Только новость достигла инстаграма, сработал эффект сарафанного ра... <a href="http://lililoveme.livejournal.com/102246.html" target="_blank" class="link">Продолжение в моём бложике</a>
         </p>
     </div>
-	<div class="section" id="section2"><h1 class="h1-3">Коробочка стоит 20 $,<br />к конкретному дню — 25 $<br />Ещё есть <a href="subscribe/">подписка по субботам</a><br />за 100 $ в месяц</h1></div>
+	<div class="section" id="section2"><h1 class="h1-3">Коробочка стоит 20 $,<br />к конкретному дню — 25 $</h1></div>
     <div class="section" id="insta1"><iframe src="http://instagram.com/p/m0lcT7gDzQ/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
 	<div class="section" id="section3"><h1 class="h1-4">В коробочке ассорти начинок, либо какая-то
 одна на ваш вкус. Малина, лимон, апельсин,
@@ -350,7 +351,7 @@
 и арахис!!! Но это для&nbsp;сладкоежек))
 Любителям не очень сладкого скорее
 всего приглянется кофе и лимон.</h1></div>
-    <div class="section" id="section4"><h1 class="h1-5">В <a href="http://vk.com/lililovemeby" target="_blank" style="text-decoration: underline;">группе вконтакте</a> и <a href="http://instagram.com/lililovemeby" target="_blank" style="text-decoration: underline;">инстаграме</a> пишут:<br />«Божественны», «Сумасшедше&nbsp;вкусные»,<br />«Мегакрутые», «надо было брать две»</h1></div>
+    <div class="section" id="section4"><h1 class="h1-5">В <a href="http://instagram.com/lililovemeby" target="_blank" style="text-decoration: underline;">инстаграме</a> пишут:<br />«Божественны», «Сумасшедше&nbsp;вкусные»,<br />«Мегакрутые», «надо было брать две»</h1></div>
     <div class="section" id="section5"></div>
     <div class="section" id="insta1"><iframe src="http://instagram.com/p/msLoxdgD_z/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
     <div class="section" id="section7"></div>
@@ -378,10 +379,10 @@
     </div>
     <div class="section" id="info2">
     <p class="q">Как забрать макаронс?</p>
-    <p class="a">Забрать можно недалеко от Востока или Фрунзенской. Адрес, карту и время мы вышлем в первом письме после заказа.</p>
+    <p class="a">Забрать можно в Минске, недалеко от Востока или Фрунзенской. Адрес, карту и время мы вышлем в первом письме после заказа.</p>
         <p class="break">—</p>
     <p class="q">Есть ли у вас доставка?</p>
-    <p class="a">Нет, вы должны забрать макаронс сами. Доставка только каждое субботнее утро при <a href="subscribe/" class="link">подписке на макаронс</a>.</p>
+    <p class="a">Нет, вы должны забрать макаронс сами.</p>
         <p class="break">—</p>
     <p class="q">Можно ли заказать в Москву, Питер, Ригу?</p>
     <p class="a">Нет, Минск онли.</p>
