--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="examples.css" />
 
+
+    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="apple-touch-icon" href="favicon-152.png" />
+
 	<style>
 
     a {
